addPromotion