@@ -1,6 +1,6 @@
 package dao;
 
-import model.Product;
+import model.*;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.EntityTransaction;
 import jakarta.persistence.TypedQuery;
@@ -8,7 +8,6 @@ import jakarta.persistence.criteria.CriteriaBuilder;
 import jakarta.persistence.criteria.CriteriaQuery;
 import jakarta.persistence.criteria.Predicate;
 import jakarta.persistence.criteria.Root;
-import model.Vendor;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import service.GenericService;
@@ -124,14 +123,15 @@ public abstract class GenericDAO<T, ID> implements GenericService<T,ID> {
         Map<String, EntitySearchConfig> entitySearchConfigMap = new HashMap<>();
         entitySearchConfigMap.put("product", new EntitySearchConfig(Product.class, Arrays.asList("productID", "productName", "registrationNumber")));
         entitySearchConfigMap.put("vendor", new EntitySearchConfig(Vendor.class, Arrays.asList("vendorID", "country", "vendorName")));
-        entitySearchConfigMap.put("administration", new EntitySearchConfig(Product.class, List.of("administrationRouteName")));
-        entitySearchConfigMap.put("vendor", new EntitySearchConfig(Vendor.class, Arrays.asList("vendorID", "vendorName", "country")));
-        entitySearchConfigMap.put("category", new EntitySearchConfig(Product.class, List.of("categoryName")));
-        entitySearchConfigMap.put("customer", new EntitySearchConfig(Product.class, List.of("customerID", "customerName", "phoneNumber", "email", "address")));
-        entitySearchConfigMap.put("employee", new EntitySearchConfig(Product.class, List.of("employeeID", "employeeName", "phoneNumber", "email", "address", "status", "degree")));
-        entitySearchConfigMap.put("functional food", new EntitySearchConfig(Product.class, List.of("mainNutrients", "supplementaryIngredients")));
-        entitySearchConfigMap.put("medical supply", new EntitySearchConfig(Product.class, List.of("medicalSupplyType")));
-        entitySearchConfigMap.put("medicine", new EntitySearchConfig(Product.class, List.of("activeIngredient", "conversionUnit")));
+        entitySearchConfigMap.put("administration", new EntitySearchConfig(AdministrationRoute.class, Arrays.asList("administrationRouteName")));
+        entitySearchConfigMap.put("category", new EntitySearchConfig(Category.class, Arrays.asList("categoryName")));
+        entitySearchConfigMap.put("customer", new EntitySearchConfig(Customer.class, Arrays.asList("customerID", "customerName", "phoneNumber", "email", "address")));
+        entitySearchConfigMap.put("employee", new EntitySearchConfig(Employee.class, Arrays.asList("employeeID", "employeeName", "phoneNumber", "email", "address", "status", "degree")));
+        entitySearchConfigMap.put("functionalfood", new EntitySearchConfig(FunctionalFood.class, Arrays.asList("mainNutrients", "supplementaryIngredients")));
+        entitySearchConfigMap.put("medicalsupply", new EntitySearchConfig(MedicalSupply.class, Arrays.asList("medicalSupplyType")));
+        entitySearchConfigMap.put("medicine", new EntitySearchConfig(Medicine.class, Arrays.asList("activeIngredient", "conversionUnit")));
+        entitySearchConfigMap.put("promotiontype", new EntitySearchConfig(PromotionType.class, Arrays.asList("promotionTypeName")));
+
 
 
         EntitySearchConfig config = entitySearchConfigMap.get(entityName.toLowerCase());
